<resources>
    <string name="app_name">ToDoListGroupTwo</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="save_task">Save task</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="log_out">Log out</string>
    <string name="task_completed">Task completed</string>
    <string name="ok">Ok</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="empty_title_error">Title is required</string>
</resources>
